--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <link rel="stylesheet" href="/src/style.css" />
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/index.js"></script>
     <canvas id="myCanvas" width="1440px" height="1440px"></canvas>
   </body>
 </html>
